# metallic

./: Cargo.toml  README.md  TODO.md
examples/: basic.rs  todo-app.rs
pkgs/app/: Cargo.toml
pkgs/app/src/: main.rs
pkgs/metallic/: Cargo.toml
pkgs/metallic/src/: lib.rs  primitives.rs  rendering_engine.rs
pkgs/metallic/src/primitives/: mod.rs  tests.rs
pkgs/metallic/src/rendering_engine/: glyph_bundle.rs  mod.rs  wgpu_bundle.rs
pkgs/metallic/src/rendering_engine/hit_engine/: mod.rs
src/: lib.rs  main.rs  primitives.rs  rendering_engine.rs  scene.rs  shader.wgsl
src/primitives/: mod.rs  tests.rs
src/rendering_engine/: bundles.rs  mod.rs  object_engine.rs
src/rendering_engine/hit_engine/: tests.rs
src/shaders/: main.wgsl  solid.wgsl
