[workspace]
members = [ "pkgs/app",
  "pkgs/metallic",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
hashbrown = "0.14.5"
pollster = "0.3"
wgpu = "0.20"
winit = "0.30"

[workspace.dependencies.uuid]
version = "1.8.0"
features = ["v4", "fast-rng"]

[workspace.dependencies.bytemuck]
version = "1.16"
features = ["derive"]

[profile.release]
opt-level = "s"
