[workspace]
members = ["pkgs/app", "pkgs/metallic"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
glyph_brush = "0.7"
lyon = "1.0"
pollster = "0.3"
thiserror = "1.0"
wgpu = "0.20"
winit = "0.30"

[workspace.dependencies.bytemuck]
version = "1.16"
features = ["derive"]

[workspace.dependencies.euclid]
version = "0.22"
features = ["bytemuck"]

[profile.release]
opt-level = "z"
lto = true
