[package]
name = "metallic"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmic-text = "0.11"
lyon = "1.0"
thiserror = "1.0"
wgpu = "0.20"
winit = "0.30"

[dependencies.bytemuck]
version = "1.16"
features = ["derive"]

[dependencies.euclid]
version = "0.22"
features = ["bytemuck"]

[dev-dependencies]
anyhow = "1.0"
pollster = "0.3"
